[tool.poetry]
name = "digimon"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <boatkrap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlmodel = "^0.0.21"
pg8000 = "^1.31.2"
asyncpg = "^0.29.0"
locust = "^2.31.3"
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
bcrypt = "^4.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
